--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,14 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"  crossorigin="anonymous">
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"  crossorigin="anonymous"></script>
-    <title>React App</title>
+    <title>Diablo Inventory</title>
   </head>
-  <body>
+  <body class='w-screen min-h-screen'>
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
-    <div id="root"></div>
+    <div id="root" class="w-screen min-h-screen"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
